# Drone-Navigation

./: bunker_drone_guide.md
indoor_drone_nav_v2/: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  package.xml  requirements.txt  setup.py
indoor_drone_nav_v2/Docker/: Dockerfile.desktop  Dockerfile.jetson_nano  Dockerfile.simulation
indoor_drone_nav_v2/action/: Arm.action  ExecuteMission.action  GetPath.action  GotoPosition.action  Land.action
indoor_drone_nav_v2/config/control/: twist_mux.yaml
indoor_drone_nav_v2/config/ekf/: ekf.yaml
indoor_drone_nav_v2/config/nav2/: nav2.yaml
indoor_drone_nav_v2/config/presets/: basic_navigation.yaml  camera_imu_basic.yaml  commercial_safety.yaml  dji_matrice.yaml  lidar_camera_professional.yaml  professional_setup.yaml  px4_quadcopter_basic.yaml  simulation.yaml  simulation_sensors.yaml  standard_safety.yaml
indoor_drone_nav_v2/config/slam/: cartographer.lua  map_builder.lua  slam_toolbox.yaml  trajectory_builder.lua
indoor_drone_nav_v2/docs/: developer_guide.md  user_guide.md
indoor_drone_nav_v2/examples/: basic_navigation.py
indoor_drone_nav_v2/gui_interface/web_gui/static/css/: dashboard.css
indoor_drone_nav_v2/gui_interface/web_gui/static/js/: dashboard.js
indoor_drone_nav_v2/gui_interface/web_gui/templates/: dashboard.html
indoor_drone_nav_v2/launch/: control.launch.py  dji_advanced.launch.py  master_launch.py  nav2.launch.py  px4_basic.launch.py  rtabmap.launch.py  simulation.launch.py
indoor_drone_nav_v2/msg/: BoundingBox.msg  DroneState.msg  MissionPlan.msg  Waypoint.msg
indoor_drone_nav_v2/scripts/: deployment_manager.py  quick_start.py
indoor_drone_nav_v2/src/indoor_drone_nav_v2/core/slam_engine/: multi_modal_slam.py
indoor_drone_nav_v2/src/indoor_drone_nav_v2/data_management/: flight_data_manager.py
indoor_drone_nav_v2/src/indoor_drone_nav_v2/drone_interfaces/: dji_interface.py  drone_action_server_node.py  mavros_interface.py  simulation_interface.py  state_aggregator_node.py  universal_interface.py  velocity_bridge_node.py
indoor_drone_nav_v2/src/indoor_drone_nav_v2/gui_interface/: mission_control_server.py
indoor_drone_nav_v2/src/indoor_drone_nav_v2/mission_planning/: intelligent_mission_planner.py  mission_executor_node.py  path_planner_node.py
indoor_drone_nav_v2/src/indoor_drone_nav_v2/ml_modules/: object_detection_node.py  visual_servoing_node.py
indoor_drone_nav_v2/src/indoor_drone_nav_v2/safety_systems/: advanced_safety_monitor.py  advanced_safety_monitor_node.py
indoor_drone_nav_v2/testing_framework/: test_run.py  test_suite_manager.py
indoor_drone_nav_v2/testing_framework/integration_tests/: test_rtabmap_integration.py  test_slam_integration.py  test_target_lock_integration.py  test_twist_mux_integration.py
indoor_drone_nav_v2/testing_framework/unit_tests/: test_mavros_interface.py  test_object_detection_node.py  test_path_planner_node.py  test_visual_servoing_node.py
(+2 files in other folders)
